# CCalculator

./: LICENSE  README.md  ReadMe_EN.md  cbigmath.cpp  cbignum.cpp  cbignum.h  mainwindow.cpp  precisionpage.h
CCalculator/: CMakeLists.txt  DivisionBenchmarkThread.h  LICENSE.txt  about.html  about_Lite.html  aboutpage.cpp  aboutpage.h  aboutpage.ui  aboutpagelite.cpp  aboutpagelite.h  cbigmath.cpp  cbigmath.h  cbignum.cpp  cbignum.h  clickablelabelfilter.cpp  clickablelabelfilter.h  compute.cpp  compute.h  helpdialog.cpp  helpdialog.h  helpdialog.ui  historyview.cpp  historyview.h  historyview.ui  logoConfig.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  missingHtml.html  precisionpage.cpp  precisionpage.h  precisionpage.ui  qutils.cpp  qutils.h  resdisplaypage.cpp  resdisplaypage.h  resdisplaypage.ui  resource.qrc  resultview.cpp  (+10 more)
CCalculator/rcs/: my_logo.pixil
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  History.db  build.ninja  cmake_install.cmake  iniConfig.ini  qtcsettings.cmake
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qt/deploy_qml_imports/: CCalculator.cmake
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_CCalculator.rsp
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/CCalculator_autogen/: deps  mocs_compilation.cpp
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/CCalculator_autogen/EWIEGA46WW/: moc_aboutpage.cpp  moc_aboutpage.cpp.d  moc_aboutpagelite.cpp  moc_aboutpagelite.cpp.d  moc_clickablelabelfilter.cpp  moc_clickablelabelfilter.cpp.d  moc_helpdialog.cpp.d  moc_historyview.cpp  moc_historyview.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_resource.cpp
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/CCalculator_autogen/include/: ui_aboutpage.h  ui_historyview.h  ui_mainwindow.h
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  History.db  build.ninja  cmake_install.cmake  iniConfig.ini
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Release/.qt/: QtDeploySupport.cmake
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Release/.qt/deploy_qml_imports/: CCalculator.cmake
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Release/.qt_plugins/: Qt6_QmlPlugins_Imports_CCalculator.rsp
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Release/.qtc_clangd/: compile_commands.json
build-CCaculator-Desktop_Qt_6_6_1_MSVC2019_64bit-Release/CCalculator_autogen/: deps  mocs_compilation.cpp
(+757 files in other folders)
